<resources>
    <string name="app_name">QRCode Generate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloGerador">Gerar QRCode</string>
    <string name="tituloGerarEmail">Email</string>
    <string name="img_name_personalizado">Personalizado</string>
    <string name="img_name_email">E-mail</string>
    <string name="img_name_mensagem">Mensagem</string>
    <string name="img_name_contato">Contato</string>
    <string name="img_name_telefone">Telefone</string>
    <string name="img_name_texto">Texto</string>
    <string name="img_name_localizacao">Localização</string>
    <string name="img_name_evento">Evento</string>
    <string name="img_name_url">URL</string>
    <string name="img_name_wifi">Wifi</string>
    <string name="emailPara">Para</string>
    <string name="emailAssunto">Assunto</string>
    <string name="emailMensagem">Mensagem</string>
    <string name="senhaDeAcesso">Deseja inserir senha de acesso?</string>
    <string name="gerar">Gerar</string>
    <string name="tituloGerarMensagem">Mensagem</string>
    <string name="tituloGerarContato">Contato</string>
    <string name="importarContato">Importar contato</string>
    <string name="nomeCompleto">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="texto">Texto</string>
    <string name="descricao">Descrição</string>
    <string name="titulo">Título</string>
    <string name="local">Local</string>
    <string name="inicio">Início</string>
    <string name="termino">Término</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="wpawpa2">WPA/WPA2</string>
    <string name="wep">WEP</string>
    <string name="nenhum">Nenhum</string>
    <string name="ssid">SSID</string>
    <string name="adicionarCampo">Adicionar campo</string>
    <string name="conteudo">Conteúdo</string>
    <string name="inserir_localizacao">Inserir Localização</string>
    <string name="str_imagem_de_contato">Imagem de Contato</string>
    <string name="str_imagem_de_email">Imagem de E-mail</string>
    <string name="latitudeLongitude">Latitude , Longitude</string>
    <string name="longitude">Longitude</string>
    <string name="str_imagem_de_mensagem">Imagem de Mensagem</string>
    <string name="str_imagem_personalizado">Imagem Personalizado</string>
    <string name="str_imagem_localizacao">Imagem Localização</string>
    <string name="str_imagem_telefone">Imagem Telefone</string>
    <string name="str_imagem_texto">Imagem Texto</string>
    <string name="str_imagem_url">Imagem URL</string>
    <string name="str_imagem_wi_fi">Imagem Wi-Fi</string>
    <string name="enviarMensagem">Enviar Mensagem</string>
    <string name="enviarEmail"> Enviar E-mail</string>
    <string name="enviarContato">Salvar Contato</string>
    <string name="enviarEvento">Salvar Evento</string>
    <string name="enviarLocalizacao">Abrir no Mapa</string>
    <string name="enviarTelefone">Fazer chamada</string>
    <string name="enviarTexto">Enviar Texto</string>
    <string name="enviarUrl">Abrir na WEB</string>
    <string name="enviarWifi">Conectar Wi-Fi</string>
    <string name="str_imagem_qr_code">Imagem QR Code</string>
    <string name="str_imagem_baixar">Imagem Baixar</string>
    <string name="str_imagem_compartilhar">Imagem Compartilhar</string>
    <string name="title_activity_gerar_qrcode_geo_localizacao">Map</string>
    <string name="historico_leitura">Histórico Leitura</string>
    <string name="historico_gerado">Histórico Gerado</string>
</resources>
