<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    tools:context=".model.GerarQRCodeEmail">



    <LinearLayout
        android:id="@+id/linearEmail"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top_componentes"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnVoltarEmail"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:layout_marginTop="@dimen/margin_top_seta_voltar"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top_componentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageEmail"
                android:background="@drawable/email"
                android:contentDescription="@string/str_imagem_de_email"
                android:layout_marginStart="20dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp" />
            <TextView
                android:id="@+id/txtEmail"
                android:text="@string/tituloGerarEmail"
                android:textSize="@dimen/tam_titulo_pagina_gerar_qr_code"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:layout_below="@id/linearEmail"
        android:id="@+id/edtEmailPara"
        android:hint="@string/emailPara"
        android:autofillHints="@string/emailPara"
        tools:targetApi="o"
        android:inputType="textEmailAddress"
        android:background="@drawable/main_bk_element"
        android:layout_marginTop="@dimen/margin_top_componentes"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_below="@id/edtEmailPara"
        android:id="@+id/edtEmailAssunto"
        android:hint="@string/emailAssunto"
        android:autofillHints="@string/emailAssunto"
        tools:targetApi="o"
        android:inputType="textEmailSubject"
        android:background="@drawable/main_bk_element"
        android:layout_marginTop="@dimen/margin_top_componentes"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_below="@id/edtEmailAssunto"
        android:id="@+id/edtEmailMensagem"
        android:hint="@string/emailMensagem"
        android:autofillHints="@string/emailMensagem"
        tools:targetApi="o"
        android:background="@drawable/main_bk_element"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:layout_marginTop="@dimen/margin_top_componentes"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <LinearLayout
        android:id="@+id/linearEmail2"
        android:layout_below="@id/edtEmailMensagem"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top_componentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkSenhaEmail"
            android:layout_marginStart="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:text="@string/senhaDeAcesso"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGerarEmail"
        android:layout_below="@id/linearEmail2"
        android:text="@string/gerar"
        android:background="@drawable/botao_personalizado"
        android:layout_marginTop="@dimen/margin_top_componentes"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnEnviarEmail"
        android:layout_below="@id/linearEmail2"
        android:text="@string/enviarEmail"
        android:drawableLeft="@drawable/enviar_email"
        android:background="@drawable/botao_personalizado"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/margin_top_componentes"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="170dp"
        android:layout_height="wrap_content" />




</RelativeLayout>