<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:map="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bk"
tools:context=".model.GerarQRCodeGeoLocalizacao">

<LinearLayout
    android:id="@+id/linearLocalizacao"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/margin_top_componentes"
    android:layout_centerHorizontal="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/btnVoltarLocalizacao"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:layout_marginTop="@dimen/margin_top_seta_voltar"
        android:layout_width="50dp"
        android:layout_height="50dp" />
    <TextView
        android:layout_width="20dp"
        android:layout_height="20dp" />
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top_componentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageLocalizacao"
            android:background="@drawable/localizacao"
            android:contentDescription="@string/str_imagem_localizacao"
            android:layout_marginStart="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/txtLocalizacao"
            android:text="@string/img_name_localizacao"
            android:textSize="@dimen/tam_titulo_pagina_gerar_qr_code"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>


<EditText
    android:layout_below="@id/linearLocalizacao"
    android:id="@+id/edtDescricaoLocalizacao"
    android:hint="@string/descricao"
    android:autofillHints="@string/descricao"
    tools:targetApi="o"
    android:inputType="text"
    android:background="@drawable/main_bk_element"
    android:layout_marginTop="@dimen/margin_top_componentes"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

<EditText
    android:layout_below="@id/edtDescricaoLocalizacao"
    android:id="@+id/edtLatitudeLongitude"
    android:hint="@string/latitudeLongitude"
    android:autofillHints="@string/latitudeLongitude"
    tools:targetApi="o"
    android:inputType="text"
    android:background="@drawable/main_bk_element"
    android:layout_marginTop="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_width="match_parent"
    android:textAlignment="center"
    android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSetarLocalizacao"
        android:layout_below="@id/edtLatitudeLongitude"
        android:text="@string/inserir_localizacao"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/botao_personalizado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

<fragment
    android:id="@+id/map"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_below="@id/btnSetarLocalizacao"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    tools:context=".model.GerarQRCodeGeoLocalizacao"
    android:name="com.google.android.gms.maps.SupportMapFragment" />

<LinearLayout
    android:id="@+id/linearLocalizacao2"
    android:layout_below="@id/map"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/margin_top_componentes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/checkSenhaLocalizacao"
        android:layout_marginStart="20dp"
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <TextView
        android:text="@string/senhaDeAcesso"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

<Button
    android:id="@+id/btnGerarLocalizacao"
    android:layout_below="@id/linearLocalizacao2"
    android:text="@string/gerar"
    android:background="@drawable/botao_personalizado"
    android:layout_marginTop="@dimen/margin_top_componentes"
    android:layout_centerHorizontal="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnEnviarLocalizacao"
        android:layout_below="@id/linearLocalizacao2"
        android:text="@string/enviarLocalizacao"
        android:background="@drawable/botao_personalizado"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/margin_top_componentes"
        android:drawableLeft="@drawable/abrir_localizacao"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="180dp"
        android:layout_height="wrap_content" />
</RelativeLayout>